# SoloMiner

./: CMakeLists.txt  MergedMiner.cpp  MergedMiner.h  cryptonote_config.h  main.cpp
common/: int-util.h
crypto/: chacha8.h  hash-ops.h  hash.h  slow-hash.c
cryptonote_core/: cryptonote_basic.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  difficulty.cpp  miner.cpp  miner.h  tx_extra.h
nmake/: build.bat  prepare.bat
nmake_64/: build.bat  prepare.bat
nmake_amd64/: build.bat  prepare.bat
nmake_i386/: build.bat  prepare.bat
rpc/: core_rpc_server_commands_defs.h
serialization/: crypto.h  serialization.h
vs2013/: build.bat  prepare.bat
vs2013_64/: build.bat  prepare.bat
vs2013_amd64/: build.bat  prepare.bat
vs2013_i386/: build.bat  prepare.bat
